# Flowfund

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
app/: main.py
app/api/: loans.py  users.py  wallets.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py  loan.py  simulation.py  transaction.py  wallet.py
app/schemas/: eligibility.py  loan.py  portfolio.py  profile.py  risk.py  transaction.py  wallet.py
app/services/: eligibility.py  loan.py  loan_simulator.py  profile.py  risk.py  wallet.py
assistant/: api.py  conversation.py  embedder.py  fallback.py  fetch_context.py  graph.py  guidelines.py  judge.py  load_history.py  main.py  persist_turn.py  rag_answer.py  retriever.py  rewriter.py  settings.py  state.py  vector_store.py
assistant/corpus/concepts/: 30-percent-rule.md  cash-flow-for-daily-earners.md  flat-vs-reducing.md  why-buffer-matters.md
assistant/corpus/faq/: can-i-afford-this-loan.md  how-much-wallet-balance.md  shop-closed-for-a-week.md  what-if-i-miss-a-day.md  what-is-unsustainable.md  why-is-my-risk-high.md
assistant/corpus/policy/: daily-debit.md  default-definition.md  early-repayment.md  insufficient-balance.md  wallet-buffer.md
assistant/corpus/regulation/: borrower-rights.md  interest-rate-disclosure.md  rbi-fair-practices.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: api.ts  index.css  types.ts  utils.ts
scripts/: seed_demo.py  seed_rag.py
tests/: test_loan_simulator.py  test_risk.py
(+12 files in other folders)
